--- a/kevdev magazine/css/ejercicio-sass.scss
+++ b/kevdev magazine/css/ejercicio-sass.scss
@@ -2,5 +2,7 @@
 @import "../components/profiles.scss";
 @import "../components/stadistics.scss";
 @import "../components/locations.scss";
+@import "../components/galery";
+@import "../components/articles";
 
 
