--- a/kevdev magazine/components/_locations.scss
+++ b/kevdev magazine/components/_locations.scss
@@ -3,9 +3,8 @@
 	height: 90px;
 	margin: 30px auto 0 auto;
 	padding: 20px 0 0 50px;
-	border-radius: 20px;
-	background-color: $color-claro;
-	color: $color-primario;
+	@include caja;
+	
 	i {
 		display: block;
 		float: left;
@@ -23,5 +22,6 @@
 		text-transform: uppercase;
 		font-size: 12px;
 		font-family: $fuente2;
+		color: get-opacity($color-primario, .50);
 	}
 }
